objects/ssot__VehicleTelematicsEvent__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccelerationNumber__c</fullName>
        <label>Acceleration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AccelerationUomId__c</fullName>
        <label>Acceleration UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetCategory__c</fullName>
        <label>Asset Category</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetUniqueIdentifier__c</fullName>
        <label>Asset Unique Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CruiseControlStatus__c</fullName>
        <label>Cruise Control Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngineRevolutionsPerMinuteNumber__c</fullName>
        <label>Engine Revolutions Per Minute</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EventCategory__c</fullName>
        <label>Event Category</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EventSubType__c</fullName>
        <label>Event Sub Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EventType__c</fullName>
        <label>Event Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Vehicle Telematics Event Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IgnitionStatus__c</fullName>
        <label>Ignition Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OdometerReadingNumber__c</fullName>
        <label>Odometer Reading</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OdometerReadingUomId__c</fullName>
        <label>Odometer Reading UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Priority__c</fullName>
        <label>Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SentDateTime__c</fullName>
        <label>Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SpeedNumber__c</fullName>
        <label>Speed</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SpeedUomId__c</fullName>
        <label>Speed UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TelematicsProviderId__c</fullName>
        <label>Telematics Provider</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TriggeredDateTime__c</fullName>
        <label>Triggered Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__VehicleId__c</fullName>
        <label>Vehicle</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761233070_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleTelematicsEvent_AccelerationU_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>VehicleTelematicsEvent_AccelerationU_rel</relationshipLabel>
        <relationshipName>rel_1697761233070_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761233172_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleTelematicsEvent_AssetId_map_A_rel</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>VehicleTelematicsEvent_AssetId_map_A_rel</relationshipLabel>
        <relationshipName>rel_1697761233172_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761233235_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleTelematicsEvent_OdometerReadi_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>VehicleTelematicsEvent_OdometerReadi_rel</relationshipLabel>
        <relationshipName>rel_1697761233235_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>